Adding Database schema and example for password file.

--- a/Hardly.Library.Sql/Hardly.Library.Sql.csproj
+++ b/Hardly.Library.Sql/Hardly.Library.Sql.csproj
@@ -66,6 +66,10 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="DBSchema.txt" />
+    <Content Include="SAMPLE_Place_in_bin_dir-UidAndPwd.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
