--- a/TwitchChatBotConsole/Hardly.Games.Holdem.Gui/Hardly.Games.Holdem.Gui.csproj
+++ b/TwitchChatBotConsole/Hardly.Games.Holdem.Gui/Hardly.Games.Holdem.Gui.csproj
@@ -4,15 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{64316FB2-3BFA-46E7-868A-FAA53EE30261}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{7885E4C8-136A-47AD-A936-CDCC297B3A4A}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Hardly.Games</RootNamespace>
-    <AssemblyName>Hardly.Games</AssemblyName>
+    <RootNamespace>Hardly.Games.Holdem.Gui</RootNamespace>
+    <AssemblyName>Hardly.Games.Holdem.Gui</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -36,24 +39,56 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Deployment" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cards\CardCollection.cs" />
-    <Compile Include="Cards\Deck.cs" />
-    <Compile Include="Cards\PlayingCard.cs" />
-    <Compile Include="Controllers\CardGame.cs" />
-    <Compile Include="Controllers\CardPlayerHand.cs" />
-    <Compile Include="Controllers\Game.cs" />
-    <Compile Include="Controllers\PointManager.cs" />
+    <Compile Include="Holdem.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Holdem.Designer.cs">
+      <DependentUpon>Holdem.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Holdem.resx">
+      <DependentUpon>Holdem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="NumberGames\" />
+    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Hardly\Hardly.csproj">
+    <ProjectReference Include="..\..\Hardly.Games.Holdem\Hardly.Games.Holdem.csproj">
+      <Project>{d0eb0d1e-80e3-4d6f-94e5-14bec0d4a0ef}</Project>
+      <Name>Hardly.Games.Holdem</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Hardly.Games\Hardly.Games.csproj">
+      <Project>{64316fb2-3bfa-46e7-868a-faa53ee30261}</Project>
+      <Name>Hardly.Games</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Hardly\Hardly.csproj">
       <Project>{aa4abdd7-67d3-47f7-8e6d-4b5c394c2055}</Project>
       <Name>Hardly</Name>
     </ProjectReference>
