--- a/Hardly.Library.Twitch.Chat/Hardly.Library.Twitch.Chat.csproj
+++ b/Hardly.Library.Twitch.Chat/Hardly.Library.Twitch.Chat.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Commands\Games\Holdem\TwitchHoldem.cs" />
     <Compile Include="Commands\Games\NumberGames\TwitchPickANumber.cs" />
     <Compile Include="Commands\System\AboutCommands.cs" />
+    <Compile Include="Commands\System\HelloCommand.cs" />
     <Compile Include="Controllers\ChatCommand.cs" />
     <Compile Include="Library\TwitchCommandController.cs" />
     <Compile Include="Logic\States\GameState.cs" />
