--- a/Hardly.GamesTests/Hardly.GamesTests.csproj
+++ b/Hardly.GamesTests/Hardly.GamesTests.csproj
@@ -52,6 +52,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Cards\DeckTests.cs" />
+    <Compile Include="Controllers\PokerPlayerHandTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
