Twitch Holdem is working!  ...barely.

--- a/Hardly.Library.Twitch.Chat/Hardly.Library.Twitch.Chat.csproj
+++ b/Hardly.Library.Twitch.Chat/Hardly.Library.Twitch.Chat.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Commands\Games\Holdem\HoldemStateAcceptingPlayers.cs" />
     <Compile Include="Commands\Games\Holdem\HoldemStateEndOfGame.cs" />
     <Compile Include="Commands\Games\Holdem\HoldemStateOff.cs" />
+    <Compile Include="Commands\Games\Holdem\HoldemStatePlay.cs" />
     <Compile Include="Commands\Games\Holdem\HoldemStatePlayFlop.cs" />
     <Compile Include="Commands\Games\Holdem\HoldemStatePlayPreFlop.cs" />
     <Compile Include="Commands\Games\Holdem\HoldemStatePlayRiver.cs" />
