--- a/Hardly/Hardly.csproj
+++ b/Hardly/Hardly.csproj
@@ -64,6 +64,7 @@
     <Compile Include="TypeHelpers\File.cs" />
     <Compile Include="Controllers\Log.cs" />
     <Compile Include="Abstract\AppController.cs" />
+    <Compile Include="TypeHelpers\List.cs" />
     <Compile Include="TypeHelpers\ListHelpers.cs" />
     <Compile Include="TypeHelpers\Regex.cs" />
     <Compile Include="TypeHelpers\ArrayHelpers.cs" />
