--- a/Hardly.Games.Poker/Hardly.Games.Poker.csproj
+++ b/Hardly.Games.Poker/Hardly.Games.Poker.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PokerPlayerHand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TexasHoldem.cs" />
     <Compile Include="TexasHoldemPlayer.cs" />
