Bot is working again.  Blackjack & Holdem are currently removed... coming back shortly.

--- a/Hardly.Games.Blackjack/Hardly.Games.Blackjack.csproj
+++ b/Hardly.Games.Blackjack/Hardly.Games.Blackjack.csproj
@@ -42,7 +42,7 @@
   <ItemGroup>
     <Compile Include="Blackjack.cs" />
     <Compile Include="BlackjackPlayer.cs" />
-    <Compile Include="BlackjackPlayerHand.cs" />
+    <Compile Include="BlackjackCardListEvaluator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
