--- a/Hardly.Games.Poker/Hardly.Games.Poker.csproj
+++ b/Hardly.Games.Poker/Hardly.Games.Poker.csproj
@@ -40,7 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PokerPlayerHandEvaluator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TexasHoldem.cs" />
+    <Compile Include="TexasHoldemPlayer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Hardly.Games\Hardly.Games.csproj">
