Added default isLive for channels.

--- a/TwitchChatBotConsole/Hardly.Games.Holdem.Gui/Hardly.Games.Holdem.Gui.csproj
+++ b/TwitchChatBotConsole/Hardly.Games.Holdem.Gui/Hardly.Games.Holdem.Gui.csproj
@@ -49,7 +49,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Holdem.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Holdem.Designer.cs">
+      <DependentUpon>Holdem.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Holdem.resx">
+      <DependentUpon>Holdem.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -73,6 +82,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Hardly.Games.Poker\Hardly.Games.Poker.csproj">
+      <Project>{d0eb0d1e-80e3-4d6f-94e5-14bec0d4a0ef}</Project>
+      <Name>Hardly.Games.Poker</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Hardly.Games\Hardly.Games.csproj">
       <Project>{64316fb2-3bfa-46e7-868a-faa53ee30261}</Project>
       <Name>Hardly.Games</Name>
