Added sql data population to the project and added a couple comments.

--- a/Hardly.Library.Sql/Hardly.Library.Sql.csproj
+++ b/Hardly.Library.Sql/Hardly.Library.Sql.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="DBSchema.txt" />
+    <Content Include="PreBuild_DataPopulation_Tables.txt" />
     <Content Include="SAMPLE_Place_in_bin_dir-UidAndPwd.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
