Poker works!  woot woot.

--- a/TwitchChatBotConsole/Hardly.Games.BlackjackTests/Hardly.Games.BlackjackTests.csproj
+++ b/TwitchChatBotConsole/Hardly.Games.BlackjackTests/Hardly.Games.BlackjackTests.csproj
@@ -52,6 +52,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="BlackjackPlayerHandTests.cs" />
+    <Compile Include="BlackjackTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
