--- a/Hardly.Library.Twitch.Chat/Hardly.Library.Twitch.Chat.csproj
+++ b/Hardly.Library.Twitch.Chat/Hardly.Library.Twitch.Chat.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\3P\StrawPollCommands.cs" />
     <Compile Include="Commands\Games\Blackjack\BJStateAcceptingPlayers.cs" />
     <Compile Include="Commands\Games\Blackjack\BJStateDealerPlaying.cs" />
     <Compile Include="Commands\Games\Blackjack\BJStateOff.cs" />
@@ -97,6 +98,10 @@
     <ProjectReference Include="..\Hardly.Library.Sql\Hardly.Library.Sql.csproj">
       <Project>{f84e492b-4aa6-4d7e-84a7-5432be992d52}</Project>
       <Name>Hardly.Library.Sql</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Hardly.Library.Stawpoll\Hardly.Library.Strawpoll.csproj">
+      <Project>{6cd0813a-6216-40f4-81ed-b210fb16e9cd}</Project>
+      <Name>Hardly.Library.Strawpoll</Name>
     </ProjectReference>
     <ProjectReference Include="..\Hardly.Library.Twitch\Hardly.Library.Twitch.csproj">
       <Project>{7790f780-0088-4def-8a37-041b883c7549}</Project>
