Added a new Hearthstone game event.

--- a/Hardly.Library.Twitch.Chat/Hardly.Library.Twitch.Chat.csproj
+++ b/Hardly.Library.Twitch.Chat/Hardly.Library.Twitch.Chat.csproj
@@ -63,6 +63,8 @@
     <Compile Include="Commands\System\AboutCommands.cs" />
     <Compile Include="Commands\System\HelloCommand.cs" />
     <Compile Include="Controllers\ChatCommand.cs" />
+    <Compile Include="Events\HearthstoneEvents.cs" />
+    <Compile Include="Events\TwitchEventHandler.cs" />
     <Compile Include="Library\TwitchCommandController.cs" />
     <Compile Include="Logic\States\GameState.cs" />
     <Compile Include="ChatEvents\TwitchChatChannelEvent.cs" />
@@ -91,6 +93,10 @@
     <ProjectReference Include="..\Hardly.Games\Hardly.Games.csproj">
       <Project>{64316fb2-3bfa-46e7-868a-faa53ee30261}</Project>
       <Name>Hardly.Games</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Hardly.Library.Hearthstone\Hardly.Library.Hearthstone.csproj">
+      <Project>{6183efa1-7fe4-44c3-b6f3-934ec9ba4357}</Project>
+      <Name>Hardly.Library.Hearthstone</Name>
     </ProjectReference>
     <ProjectReference Include="..\Hardly.Library.Network\Hardly.Library.Network.csproj">
       <Project>{57f110ff-a588-47ff-a1dd-f44b684dc42d}</Project>
