--- a/Hardly.Library.Twitch.Chat.Engine/Hardly.Library.Twitch.Chat.Engine.csproj
+++ b/Hardly.Library.Twitch.Chat.Engine/Hardly.Library.Twitch.Chat.Engine.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6183EFA1-7FE4-44C3-B6F3-934EC9BA4357}</ProjectGuid>
+    <ProjectGuid>{4055AAB4-3F01-49EB-B129-D852C8BF0AEC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Hardly.Library.Hearthstone</RootNamespace>
-    <AssemblyName>Hardly.Library.Hearthstone</AssemblyName>
+    <RootNamespace>Sober.Gui</RootNamespace>
+    <AssemblyName>Sober.Gui</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,30 +40,40 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\SqlHearthstoneCard.cs" />
-    <Compile Include="Events\DrawCard.cs" />
-    <Compile Include="Events\EndOfGame.cs" />
-    <Compile Include="Events\HearthGame.cs" />
-    <Compile Include="Events\NewGame.cs" />
-    <Compile Include="Events\HearthstoneEvent.cs" />
-    <Compile Include="HearthstoneEventObserver.cs" />
-    <Compile Include="InternalEvents\HearthInternalStartingNewGame.cs" />
-    <Compile Include="InternalEvents\HearthInternalState.cs" />
-    <Compile Include="InternalEvents\HearthInternalStateGameInProgress.cs" />
-    <Compile Include="InternalEvents\HearthInternalStateOff.cs" />
+    <Compile Include="ChatEvents\TwitchChatChannelEvent.cs" />
+    <Compile Include="ChatEvents\TwitchChatEvent.cs" />
+    <Compile Include="ChatEvents\TwitchChatMessage.cs" />
+    <Compile Include="ChatEvents\TwitchChatPing.cs" />
+    <Compile Include="ChatEvents\TwitchChatUnknownEvent.cs" />
+    <Compile Include="ChatEvents\TwitchChatWhisper.cs" />
+    <Compile Include="Controllers\ChatCommand.cs" />
+    <Compile Include="Controllers\IAutoJoinTwitchRooms.cs" />
+    <Compile Include="Controllers\TwitchChatBot.cs" />
+    <Compile Include="Library\TwitchChatRoom.cs" />
+    <Compile Include="Library\TwitchCommandController.cs" />
+    <Compile Include="Library\TwitchCommandListener.cs" />
+    <Compile Include="Library\TwitchIrcConnection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TwitchEventHandler.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Hardly.Library.Network\Hardly.Library.Network.csproj">
+      <Project>{57f110ff-a588-47ff-a1dd-f44b684dc42d}</Project>
+      <Name>Hardly.Library.Network</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Hardly.Library.Sql\Hardly.Library.Sql.csproj">
       <Project>{f84e492b-4aa6-4d7e-84a7-5432be992d52}</Project>
       <Name>Hardly.Library.Sql</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Hardly.Library.Twitch\Hardly.Library.Twitch.csproj">
+      <Project>{7790f780-0088-4def-8a37-041b883c7549}</Project>
+      <Name>Hardly.Library.Twitch</Name>
     </ProjectReference>
     <ProjectReference Include="..\Hardly\Hardly.csproj">
       <Project>{aa4abdd7-67d3-47f7-8e6d-4b5c394c2055}</Project>
       <Name>Hardly</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
