--- a/Hardly.Games.Betting/Hardly.Games.Betting.csproj
+++ b/Hardly.Games.Betting/Hardly.Games.Betting.csproj
@@ -40,7 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Parimutuel\ParimutuelBettingGame.cs" />
+    <Compile Include="Parimutuel\ParimutuelPlayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Roulette\RussianRoulette.cs" />
+    <Compile Include="Roulette\RussianRoulettePlayer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Hardly.Games\Hardly.Games.csproj">
