--- a/Hardly.Games.Uno/Hardly.Games.Uno.csproj
+++ b/Hardly.Games.Uno/Hardly.Games.Uno.csproj
@@ -41,6 +41,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Uno.cs" />
+    <Compile Include="UnoCard.cs" />
+    <Compile Include="UnoDeck.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Hardly.Games\Hardly.Games.csproj">
+      <Project>{64316fb2-3bfa-46e7-868a-faa53ee30261}</Project>
+      <Name>Hardly.Games</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Hardly\Hardly.csproj">
+      <Project>{aa4abdd7-67d3-47f7-8e6d-4b5c394c2055}</Project>
+      <Name>Hardly</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
