--- a/Hardly.Games.Uno/Hardly.Games.Uno.csproj
+++ b/Hardly.Games.Uno/Hardly.Games.Uno.csproj
@@ -43,7 +43,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Uno.cs" />
     <Compile Include="UnoCard.cs" />
+    <Compile Include="UnoCardHelpers.cs" />
     <Compile Include="UnoDeck.cs" />
+    <Compile Include="UnoPlayer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Hardly.Games\Hardly.Games.csproj">
