Give points added.  https://github.com/hardlydifficult/HardlyBot/issues/52

--- a/Hardly.Library.Twitch.Chat/Hardly.Library.Twitch.Chat.csproj
+++ b/Hardly.Library.Twitch.Chat/Hardly.Library.Twitch.Chat.csproj
@@ -73,7 +73,7 @@
     <Compile Include="Commands\Games\Hearthstone\TwitchHearthstone.cs" />
     <Compile Include="Logic\States\GameState.cs" />
     <Compile Include="Logic\States\GameStateAcceptingPlayers.cs" />
-    <Compile Include="Commands\UserInfo\ViewPoints.cs" />
+    <Compile Include="Commands\UserInfo\PointCommands.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WakeUpAssembly.cs" />
   </ItemGroup>
