--- a/Hardly.Library.Hearthstone.Sql/Hardly.Library.Hearthstone.Sql.csproj
+++ b/Hardly.Library.Hearthstone.Sql/Hardly.Library.Hearthstone.Sql.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C09AB919-B727-40E8-B2FF-7481256417E0}</ProjectGuid>
+    <ProjectGuid>{49937F70-1542-4369-97DA-088EB57D5B8B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Hardly.Library.Twitch</RootNamespace>
-    <AssemblyName>Hardly.Library.Twitch.Sql</AssemblyName>
+    <RootNamespace>Hardly.Library.Hearthstone</RootNamespace>
+    <AssemblyName>Hardly.Library.Hearthstone.Sql</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,40 +41,28 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SqlTwitchAlert.cs" />
-    <Compile Include="SqlTwitchBot.cs" />
-    <Compile Include="SqlTwitchChannel.cs" />
-    <Compile Include="SqlTwitchChannelPointScale.cs" />
-    <Compile Include="SqlTwitchCommand.cs" />
-    <Compile Include="SqlTwitchFactory.cs" />
-    <Compile Include="SqlTwitchUserPoints.cs" />
-    <Compile Include="SqlTwitchConnection.cs" />
-    <Compile Include="SqlTwitchUser.cs" />
-    <Compile Include="SqlTwitchUserInChannel.cs" />
+    <Compile Include="SqlHearthstoneCard.cs" />
+    <Compile Include="SqlHearthstoneFactory.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Hardly.Library.Hearthstone.Sql\Hardly.Library.Hearthstone.Sql.csproj">
-      <Project>{49937f70-1542-4369-97da-088eb57d5b8b}</Project>
-      <Name>Hardly.Library.Hearthstone.Sql</Name>
+    <ProjectReference Include="..\Hardly.Games\Hardly.Games.csproj">
+      <Project>{64316fb2-3bfa-46e7-868a-faa53ee30261}</Project>
+      <Name>Hardly.Games</Name>
     </ProjectReference>
     <ProjectReference Include="..\Hardly.Library.Hearthstone\Hardly.Library.Hearthstone.csproj">
       <Project>{6183efa1-7fe4-44c3-b6f3-934ec9ba4357}</Project>
       <Name>Hardly.Library.Hearthstone</Name>
     </ProjectReference>
     <ProjectReference Include="..\Hardly.Library.Network\Hardly.Library.Network.csproj">
-      <Project>{7eb5f80e-455b-48b1-bb4c-770a003b30ad}</Project>
+      <Project>{57f110ff-a588-47ff-a1dd-f44b684dc42d}</Project>
       <Name>Hardly.Library.Network</Name>
     </ProjectReference>
     <ProjectReference Include="..\Hardly.Library.Sql\Hardly.Library.Sql.csproj">
       <Project>{f84e492b-4aa6-4d7e-84a7-5432be992d52}</Project>
       <Name>Hardly.Library.Sql</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Hardly.Library.Twitch\Hardly.Library.Twitch.csproj">
-      <Project>{7790f780-0088-4def-8a37-041b883c7549}</Project>
-      <Name>Hardly.Library.Twitch</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Hardly\Hardly.csproj">
-      <Project>{39ae419f-fa58-4c8f-a3a2-6212d909d67f}</Project>
+      <Project>{aa4abdd7-67d3-47f7-8e6d-4b5c394c2055}</Project>
       <Name>Hardly</Name>
     </ProjectReference>
   </ItemGroup>
